environments/prod/k8s/nginx-ingress-servicemonitor.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-servicemonitor
  namespace: default
  labels:
    app: nginx-ingress-servicemonitor
spec:
  ports:
    - name: prometheus
      protocol: TCP
      port: 9113
      targetPort: 9113
  selector:
    app: nginx-ingress
