environments/prod/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-nginx
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: http-01-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
      location /metrics {
        stub_status on;
        access_log off;
      }

spec:
  ingressClassName: external-nginx
  rules:
    - host: api.itsag3t3.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 9000
  tls:
    - hosts:
        - api.itsag3t3.com
      secretName: api-itsag3t3
